--- a/dental-management.html
+++ b/dental-management.html
@@ -34,12 +34,15 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>Every Child is special to us whether suffering from cerebral palsy, Down syndrome, Autism etc.</p>
+                        <p>Every Child is special to us whether suffering from cerebral palsy, Down syndrome, Autism etc.
+                            
+                            We try to help these kids in improving their oral health and at least making them free from dental related Problems.
+                        </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            We try to help these kids in improving their oral health and at least making them free from dental related Problems.</p>
+                            Dental management involves comprehensive care and strategic planning to maintain oral health. From routine check-ups to complex treatments, it encompasses preventive measures and therapeutic interventions tailored to individual patient needs</p>
                     </div>
 
                 </div>
