--- a/root-canal-treatment.html
+++ b/root-canal-treatment.html
@@ -34,30 +34,13 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>In our modern and welcoming clinic, we utilize advanced technology to enhance diagnostics and
-                            treatment
-                            precision. From routine check-ups to more complex dental procedures, our dedicated
-                            professionals
-                            are
-                            committed to delivering exceptional care in a warm and friendly environment. Your dental
-                            consultation
-                            marks the beginning of a partnership in achieving and maintaining optimal oral health, and
-                            we
-                            are here
-                            to guide you on your journey to a confident and radiant smile. </p>
+                        <p>A 'Root Canal Treatment 'is used to repair and save a tooth that is badly decayed or become infected. During root canal procedure, the infected nerve, blood vessels and pulp tissue are removed from tooth after which it is cleaned and sealed by biocompatible material.
+                        Without treatment, tissue surrounding the tooth will become infected, resulting in pus formation known 'abscess'. </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            Dental consultations at our clinic are tailored to provide comprehensive and personalized
-                            care
-                            for your oral health. Our expert dental professionals are committed to understanding your
-                            unique
-                            needs and concerns, ensuring a comfortable and informative experience. During the
-                            consultation,
-                            we conduct thorough examinations, including dental health assessments, X-rays, and
-                            evaluations
-                            of your oral hygiene practices.</p>
+                            At Devansh Radiology & Imaging Clinic we practice painless root canal treatment with lesser chances of relapse and failure with maximum patient comfort. We have advance facility for doing root canal treatment at our clinic which has benefited many patients and will benefit many others.</p>
                     </div>
 
                 </div>
