--- a/orthodentaltreatment.html
+++ b/orthodentaltreatment.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">PEDIATRIC DENTAL CARE</h3>
+        <h3 class="title-style mb-3">ORTHO DENTAL TREATMENT</h3>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -30,22 +30,19 @@
             <div class="row align-items-center">
                 <div class="col-lg-8 homeaboutblock mt-lg-0 mt-5">
                     <div class="treatment-image">
-                        <img src="./assets/images/pediatricdentalcare.jpg"
+                        <img src="./assets/images/aligners.webp"
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>Pediatric dental care plays a critical role in ensuring the overall health and well-being of children. Regular dental check-ups starting at a young age are essential for monitoring dental development, detecting any issues early, and preventing dental problems such as cavities and gum disease. Pediatric dentists specialize in providing age-appropriate dental care and creating a positive and comfortable experience for children.</p>
+                        <p>If you have crooked teeth, irregular teeth or misaligned bite, there are variety of treatments available, which helps in straighten them, including 'Dental Braces' and 'Retainers'.
+                        'Dental braces 'are devices used in orthodontics, that align or straighten teeth and helps to position them with regard to patient's mouth bite.
+                        Braces may consist of bands, wires and other fixed or removable corrective appliances. </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            They offer services like dental cleanings, fluoride treatments, dental sealants, and orthodontic evaluations tailored to children's unique needs. Education on proper oral hygiene practices, including brushing, flossing, and diet, is also a key aspect of pediatric dental care. By promoting good oral health habits from an early age, pediatric dentists help children maintain healthy smiles and prevent future dental problems.
-
-
-
-
-
-                        </p>
+                            They work by applying continuous pressure over certain period of time to slowly move teeth in specific direction. As the teeth move, bone changes shape, as pressure is applied.
+                             At Devansh Radiology & Imaging Clinic we have the finest Orthodontic Treatment available for creating a perfect smile.</p>
                     </div>
 
                 </div>
