--- a/orthopantomogram.html
+++ b/orthopantomogram.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">ORTHODONTICS DENTAL TREATMENT</h3>
+        <h3 class="title-style mb-3">ORTHOPANTOMOGRAM</h3>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -30,19 +30,16 @@
             <div class="row align-items-center">
                 <div class="col-lg-8 homeaboutblock mt-lg-0 mt-5">
                     <div class="treatment-image">
-                        <img src="./assets/images/depositphotos.jpg"
+                        <img src="./assets/images/OPC.jpeg"
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>If you have crooked teeth, irregular teeth or misaligned bite, there are variety of treatments available, which helps in straighten them, including 'Dental Braces' and 'Retainers'.
-                        Dental braces are devices used in orthodontics, that align or straighten teeth and helps to position them with regard to patient's mouth bite.</p>
+                        <p>An orthopantomogram (OPG), also known as a panoramic dental X-ray, is a comprehensive two-dimensional image of the entire mouth. It captures the teeth, jaws, temporomandibular joints (TMJs), and surrounding structures in a single image. OPGs are commonly used by dentists and oral surgeons to assess dental health, diagnose issues such as impacted teeth, cysts, and tumors, and plan for treatments like orthodontics and dental implants. </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            Braces may consist of bands, wires and other fixed or removable corrective appliances.
- They work by applying continuous pressure over certain period of time to slowly move teeth in specific direction. As the teeth move, bone changes shape, as pressure is applied.
-At Devansh Radiology & Imaging Clinic we have the finest Orthodontic Treatment available for creating a perfect smile.</p>
+                            Unlike traditional intraoral X-rays, OPGs provide a broad view of the oral and maxillofacial region, making them valuable for evaluating the overall dental and skeletal anatomy. OPGs are especially beneficial for patients who have difficulty with traditional intraoral X-rays or require a comprehensive assessment of their dental and jaw structures.</p>
                     </div>
 
                 </div>
