--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                                 <li><a href="./infant-dental-checkup.html"><i
                                                             class="fa fa-angle-right"></i>Infant Dental Checkup </a>
                                                 </li>
-                                                <li><a href="./"><i class="fa fa-angle-right"></i>Orthodontics Dental
+                                                <li><a href="./orthodentaltreatment.html"><i class="fa fa-angle-right"></i>Orthodontics Dental
                                                         Treatment</a></li>
                                                 <li><a href="./aesthetic-and-cosmetic-dental-treatment.html"><i
                                                             class="fa fa-angle-right"></i>Aesthetic and Cosmetic
@@ -133,17 +133,20 @@
                             </ul>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="./gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="./appointment.html">Book An Appointment</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                     </ul>
-                    <form action="#error" method="GET" class="d-flex search-header">
+                    <!-- <form action="#error" method="GET" class="d-flex search-header">
                         <input class="form-control" type="search" placeholder="Enter Keyword..." aria-label="Search"
                             required>
                         <button class="btn btn-style" type="submit"><i class="fas fa-search"></i></button>
-                    </form>
+                    </form> -->
                 </div>
                 <!-- toggle switch for light and dark theme -->
                 <div class="cont-ser-position">
