--- a/about.html
+++ b/about.html
@@ -131,17 +131,20 @@
                             </ul>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="./gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="./appointment.html">Book An Appointment</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                     </ul>
-                    <form action="#error" method="GET" class="d-flex search-header">
+                    <!-- <form action="#error" method="GET" class="d-flex search-header">
                         <input class="form-control" type="search" placeholder="Enter Keyword..." aria-label="Search"
                             required>
                         <button class="btn btn-style" type="submit"><i class="fas fa-search"></i></button>
-                    </form>
+                    </form> -->
                 </div>
                 <!-- toggle switch for light and dark theme -->
                 <div class="cont-ser-position">
@@ -487,13 +490,11 @@
                 <div class="item">
                     <div class="slider-info">
                         <div class="img-circle">
-                            <img src="assets/images/testi1.jpg" class="img-fluid rounded" alt="client image">
+                            <img src="assets/images/testimonial-1.jpg" class="img-fluid rounded" alt="client image">
                         </div>
                         <div class="message-info">
                             <span class="fa fa-quote-left mr-2"></span>
-                            <div class="message">I'm extremely pleased with the exceptional care I received at this
-                                dental clinic. The staff was friendly, professional, and attentive to my needs. My
-                                dental procedure was painless, and the results exceeded my expectations</div>
+                            <div class="message">Quick response and good infrastructure, low in price. Treatment was really painless and quality. Dr.Anitha  was very nice and informative. She explained every doubt with patience. I highly recommended V-Smilez Dental Clinic to all my friends. At least Visit Clinic once to understand your dental needs.</div>
                             <div class="name">- Priya</div>
                             <div class="desp ms-2">Businessman</div>
                         </div>
@@ -502,15 +503,12 @@
                 <div class="item">
                     <div class="slider-info">
                         <div class="img-circle">
-                            <img src="assets/images/testi2.jpg" class="img-fluid rounded" alt="client image">
+                            <img src="assets/images/testimonial-2.jpg" class="img-fluid rounded" alt="client image">
                         </div>
                         <div class="message-info">
                             <span class="fa fa-quote-left mr-2"></span>
-                            <div class="message">As someone who's always been anxious about dental visits, I can't thank
-                                this clinic enough for their calming atmosphere and gentle approach. From the moment I
-                                walked in, I felt reassured and well-cared for. I highly recommend their services to
-                                anyone seeking top-notch dental care.</div>
-                            <div class="name">- Laxmi</div>
+                            <div class="message">I visited V-Smilez Dental recently. Dr.Anitha is very Nice. She listens to the issues carefully and provides solution with explanation.  Team at clinic are friendly and supportive. I will recommend this clinic for all your dental problems.</div>
+                            <div class="name">- Lakshman</div>
                             <div class="desp ms-2">Employee</div>
                         </div>
                     </div>
@@ -518,14 +516,11 @@
                 <div class="item">
                     <div class="slider-info">
                         <div class="img-circle">
-                            <img src="assets/images/testi3.jpg" class="img-fluid rounded" alt="client image">
+                            <img src="assets/images/testimonial-3.jpg" class="img-fluid rounded" alt="client image">
                         </div>
                         <div class="message-info">
                             <span class="fa fa-quote-left mr-2"></span>
-                            <div class="message">My entire family has been coming to this dental clinic for years, and
-                                we've never been disappointed. Whether it's for routine cleanings or more complex
-                                procedures, the team here consistently delivers outstanding care. Their expertise,
-                                coupled with their warm demeanor, makes every visit a positive experience</div>
+                            <div class="message">I have recently visited V-smilez dental clinic. They have provided the best dental treatment for me. They have provided great service and great hospitality. I recommended you to go this hospital for any kind of dental treatment.</div>
                             <div class="name">-Rithvika</div>
                             <div class="desp ms-2">Software Employee</div>
                         </div>
