--- a/index.html
+++ b/index.html
@@ -328,93 +328,84 @@
                 <div class="owl-three owl-carousel owl-theme">
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/s1.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/dental-treatment_Root-Canal-Treatment.jpg"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
-                                    <h4 class="mb-0">Sedation Dentistry</h4>
+                                    <h4 class="mb-0">Root Canal Treatment</h4>
                                 </a>
-                                <p>Sedation dentistry in a dental clinic involves administering medication to help
-                                    patients relax during dental procedures, ensuring a comfortable and anxiety-free
-                                    experience.></p>
-                                <a href="services.html" class="btn btn-style-primary">Learn More<i
+                                <p>A 'Root Canal Treatment 'is used to repair and save a tooth that is badly decayed or become infected.</p>
+                                <a href="root-canal-treatment.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/s2.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/Dental-Implant.jpeg"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
-                                    <h4 class="mb-0">Child’s Dental Care</h4>
+                                    <h4 class="mb-0">Dental implants</h4>
                                 </a>
-                                <p>Child's dental care in a dental clinic involves preventive measures, regular
-                                    check-ups, and treatments tailored to promote oral health and development from
-                                    infancy through adolescence.</p>
-                                <a href="services.html" class="btn btn-style-primary">Learn More<i
+                                <p>A Dental Implant is an artificial tooth root that is placed into your jaw, to hold are placement tooth or bridge.</p>
+                                <a href="dental-implants.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/s3.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/Phase.jpg"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
-                                    <h4 class="mb-0">Family Dental Care</h4>
+                                    <h4 class="mb-0">Habbit Correction</h4>
                                 </a>
-                                <p>Family dental care in a dental clinic encompasses comprehensive oral health services
-                                    tailored to meet the needs of patients of all ages within a single household.</p>
-                                <a href="services.html" class="btn btn-style-primary">Learn More<i
+                                <p>Many Kid's suffer from deleterious oral habit of Thumb sucking Mouth Breathing which can have a very bad effect on erupting dentition of your kids .</p>
+                                <a href="habit-correction.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/s4.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/featured_pregnancy.jpg"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
-                                    <h4 class="mb-0">Cosmetic Dentistry</h4>
+                                    <h4 class="mb-0">Pregnancy Guidance</h4>
                                 </a>
-                                <p>Cosmetic dentistry focuses on enhancing the appearance of teeth and smiles through
-                                    various procedures such as teeth whitening, veneers, and dental implants.</p>
-                                <a href="services.html" class="btn btn-style-primary">Learn More<i
+                                <p>At Devansh Radiology & Imaging Clinic We understand that pregnancy is the most enjoyable time in the women's life.</p>
+                                <a href="pregnancy-guidance.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/s5.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/smile.jpg"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
-                                    <h4 class="mb-0">Cleaning with Air Flow</h4>
+                                    <h4 class="mb-0">Smile Designing</h4>
                                 </a>
-                                <p>Cleaning with Air Flow is a dental hygiene procedure that uses a combination of
-                                    water, air, and fine powder to remove stains, plaque, and tartar from teeth
-                                    effectively.</p>
-                                <a href="services.html" class="btn btn-style-primary">Learn More<i
+                                <p> A significant distinction between a corrective dental specialist and a general dental specialist is that a general dental specialist has been prepared</p>
+                                <a href="smile-designing.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/s7.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/dental7.jpg"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
-                                    <h4 class="mb-0">Complete Whitening</h4>
+                                    <h4 class="mb-0">Dental Management</h4>
                                 </a>
-                                <p>Complete whitening is a dental procedure aimed at lightening the color of teeth and
-                                    enhancing their brightness through professional-grade bleaching treatments.</p>
-                                <a href="services.html" class="btn btn-style-primary">Learn More<i
+                                <p>Every Child is special to us whether suffering from cerebral palsy, Down syndrome, Autism etc.  </p>
+                                <a href="dental-management.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -441,11 +432,11 @@
                 </div>
                 <div class="col-md-5 text-md-center mt-md-0 mt-5">
                     <div class="counter">
-                        <div class="timer count-title count-number" data-to="6370" data-speed="1500">6370</div>
+                        <div class="timer count-title count-number" data-to="3000" data-speed="1500">3000</div>
                         <p class="count-text mt-sm-2">Happy Smiles</p>
                     </div>
                     <div class="counter mt-sm-5 mt-4">
-                        <div class="timer count-title count-number" data-to="36" data-speed="1500">36</div>
+                        <div class="timer count-title count-number" data-to="13" data-speed="1500">13   </div>
                         <p class="count-text mt-sm-2">Years of experience</p>
                     </div>
                     <div class="counter mt-sm-5 mt-4">
@@ -580,7 +571,7 @@
     <!-- //blog section -->
 
     <!-- skills section -->
-    <section class="w3l-progress pt-5" id="progress">
+    <!-- <section class="w3l-progress pt-5" id="progress">
         <div class="container pt-md-5 pt-4">
             <div class="row align-items-center">
                 <div class="col-lg-6 pe-lg-5">
@@ -597,17 +588,17 @@
                         <h6 class="progress-tittle">Implants </h6>
 
                     </div>
-                    <!-- <div class="progress-info info4">
+                     <div class="progress-info info4">
                         <h6 class="progress-tittle">React JS </h6>
                        
                     </div> -->
-                </div>
+                <!-- </div>
                 <div class="col-lg-6 text-center">
                     <img src="assets/images/Untitled_design-removebg-preview.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
-    </section>
+    </section>  -->
     <!-- //skills section -->
 
     <!-- call section -->
