--- a/contact.html
+++ b/contact.html
@@ -210,7 +210,17 @@
                 <div class="col-lg-3 col-sm-6 contact-info mt-lg-0 mt-4">
                     <i class="fas fa-user-clock"></i>
                     <h4>Working Hours</h4>
-                    <p>24 Hours</p>
+                    <p>
+                        <ul class="hours">
+                            <li>Mon - 10:00 AM to 9:00 PM</li>
+                        <li>Tue - 10:00 AM to 9:00 PM</li>
+                            <li>Wed - 10:00 AM to 9:00 PM</li>
+                            <li>Thu - 10:00 AM to 9:00 PM</li>
+                        <li>Fri - 10:00 AM to 9:00 PM</li>
+                            <li>Sat - 10:00 AM to 9:00 PM</li>
+                            <li>Sun - 10:00 AM to 8:00 PM</li>
+                        </ul>
+                    </p>
                 </div>
             </div>
             <div class="form-inner-cont mx-auto" style="max-width:800px">
