--- a/gallery.html
+++ b/gallery.html
@@ -181,13 +181,174 @@
     <!-- //inner banner -->
 
     <!-- contact section -->
-    <section class="w3l-contact-11 py-5" id="contact">
-        <div class="container py-md-5 py-4">
-            <h3 class="title-style text-center mb-5"><span>Gallery</span></h3>
+   
 
-           
+
+
+
+
+
+
+
+    <div class="w3l-homeblock2 py-5">
+        <div class="container py-md-5 py-4">
+            <h3 class="title-style text-center mb-5">Latest <span>Photos</span></h3>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="bg-clr-white hover-box">
+                        <div class="row align-items-center">
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/celebrity.jpeg" alt="" />
+                            </div>
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/interior-modern-equipped-dental-office-with-x-ray-monitors-dentist-stomatology-orthodontic-workplace.jpg" alt="" />
+
+                            </div>
+                            <div class="col-sm-4 g">
+                                <img src="./assets/images/kids-area.jpeg" alt="" />
+                            </div>
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/laser-treatment.jpg" alt="" />
+
+                            </div>
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/doc-1 (1).jpeg" alt="" />
+
+                            </div>
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/high-seriliazation.jpeg" alt="" />
+
+                            </div>
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/reception.jpg" alt="" />
+
+                            </div>
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/OPC.jpeg" alt="" />
+
+                            </div>
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/treatment-area.jpg" alt="" />
+
+                            </div>
+                            <!-- <div class="col-sm-4 g">
+
+                                <img src="./assets/images/" alt="" />
+
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
-    </section>
+    </div>
+    <style>
+        /* .v {
+            max-height: 300px;
+            width: 300px;
+        }
+
+        .v video {
+            width: 100%;
+            height: 100%;
+        } */
+        .g {
+            height: 350px;
+            width: 350px;
+            margin: 5px;
+        }
+
+        .g img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        @media(max-width:992px) {
+            .g {
+                width: 100%;
+            }
+        }
+
+        @media(max-width:575px) {
+            .g {
+                width: 100%;
+            }
+        }
+    </style>
+    <!-- videos section -->
+    <div class="w3l-homeblock2 py-5">
+        <div class="container py-md-5 py-4">
+            <h3 class="title-style text-center mb-5">Latest <span>Work</span> Videos</h3>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="bg-clr-white hover-box">
+                        <div class="row align-items-center">
+                            <div class="col-sm-4 v">
+
+                                <video width="300" height="300" controls>
+                                    <source src="./assets/images/video1.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+                            <div class="col-sm-4 v">
+
+                                <video width="300" height="300" controls>
+                                    <source src="./assets/images/video3.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+                            <div class="col-sm-4 v">
+
+                                <video width="300" height="300" controls>
+                                    <source src="./assets/images/video2.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+
+                            </div>
+                            <!-- <div class="col-sm-4 v">
+                                <video width="300" height="300" controls>
+                                    <source src="./assets/images/video3.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+                            <div class="col-sm-4 v">
+                                <video width="300" height="300" controls>
+                                    <source src="./assets/images/video4.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+
+                            </div>
+                            <div class="col-sm-4 v">
+                                <video width="300" height="300" controls>
+                                    <source src="./assets/images/video6.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+    <!-- //videos section -->
+
+
+
+
+
+
     <div class="whatsapp">
         <a href="https://wa.me/+918187835489">
             <i class="fab fa-whatsapp"></i>
