--- a/header.html
+++ b/header.html
@@ -42,17 +42,20 @@
 
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="./gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="./appointment.html">Book An Appointment</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                     </ul>
-                    <form action="#error" method="GET" class="d-flex search-header">
+                    <!-- <form action="#error" method="GET" class="d-flex search-header">
                         <input class="form-control" type="search" placeholder="Enter Keyword..." aria-label="Search"
                             required>
                         <button class="btn btn-style" type="submit"><i class="fas fa-search"></i></button>
-                    </form>
+                    </form> -->
                 </div>
                 <!-- toggle switch for light and dark theme -->
                 <div class="cont-ser-position">
