--- a/about.html
+++ b/about.html
@@ -299,7 +299,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 mt-sm-5 mt-4">
+                <!-- <div class="col-lg-4 col-sm-6 mt-sm-5 mt-4">
                     <div class="feature-gd feature-gd-2">
                         <div class="icon">
                             <i class="fas fa-syringe"></i>
@@ -312,7 +312,7 @@
                                     class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-sm-6 mt-sm-5 mt-4">
                     <div class="feature-gd feature-gd-2">
                         <div class="icon">
@@ -490,12 +490,12 @@
                 <div class="item">
                     <div class="slider-info">
                         <div class="img-circle">
-                            <img src="assets/images/testimonial-1.jpg" class="img-fluid rounded" alt="client image">
+                            <img src="assets/images/testi111.jpg" class="img-fluid rounded" alt="client image">
                         </div>
                         <div class="message-info">
                             <span class="fa fa-quote-left mr-2"></span>
                             <div class="message">Quick response and good infrastructure, low in price. Treatment was really painless and quality. Dr.Anitha  was very nice and informative. She explained every doubt with patience. I highly recommended V-Smilez Dental Clinic to all my friends. At least Visit Clinic once to understand your dental needs.</div>
-                            <div class="name">- Priya</div>
+                            <div class="name">- Lakshman</div>
                             <div class="desp ms-2">Businessman</div>
                         </div>
                     </div>
@@ -503,12 +503,12 @@
                 <div class="item">
                     <div class="slider-info">
                         <div class="img-circle">
-                            <img src="assets/images/testimonial-2.jpg" class="img-fluid rounded" alt="client image">
+                            <img src="assets/images/testi222.jpg" class="img-fluid rounded" alt="client image">
                         </div>
                         <div class="message-info">
                             <span class="fa fa-quote-left mr-2"></span>
                             <div class="message">I visited V-Smilez Dental recently. Dr.Anitha is very Nice. She listens to the issues carefully and provides solution with explanation.  Team at clinic are friendly and supportive. I will recommend this clinic for all your dental problems.</div>
-                            <div class="name">- Lakshman</div>
+                            <div class="name">- Priya</div>
                             <div class="desp ms-2">Employee</div>
                         </div>
                     </div>
@@ -516,7 +516,7 @@
                 <div class="item">
                     <div class="slider-info">
                         <div class="img-circle">
-                            <img src="assets/images/testimonial-3.jpg" class="img-fluid rounded" alt="client image">
+                            <img src="assets/images/testi333.jpg" class="img-fluid rounded" alt="client image">
                         </div>
                         <div class="message-info">
                             <span class="fa fa-quote-left mr-2"></span>
@@ -530,7 +530,11 @@
         </div>
     </section>
     <!-- //testimonials section -->
-
+    <div class="whatsapp">
+        <a href="https://wa.me/+918187835489">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
     <!-- call section -->
     <section class="w3l-call-to-action-6">
         <div class="container py-md-5 py-sm-4 py-5">
