--- a/index.html
+++ b/index.html
@@ -237,22 +237,24 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
-                            <i class="fas fa-tooth"></i>
+                            <!-- <i class="fas fa-tooth"></i> -->
+                            <img src="./assets/images/Dental-Implant.jpeg" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
-                            <h5 class="mb-3"><a href="about.html">General Dentistry</a></h5>
-                            <p>General dentistry encompasses preventive, restorative, and diagnostic oral care provided
-                                by general dentists to maintain overall oral health..</p>
+                            <h5 class="mb-3"><a href="about.html">Dental Implant</a></h5>
+                            <p> Dental implants can be given in a patient, if a single tooth is missing, if several teeth are missing (implant supported bridges) or if replacing all teeth (implant supported full dentures).
+                                Just like our own natural teeth, dental implants also require same care..</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-md-0 mt-3">
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
-                            <i class="fas fa-wheelchair"></i>
+                            <!-- <i class="fas fa-wheelchair"></i> -->
+                            <img src="./assets/images/pediatricdentalcare.jpg" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
-                            <h5 class="mb-3"><a href="about.html">Urgent Surgery</a></h5>
+                            <h5 class="mb-3"><a href="about.html">Pediatric Dental Care</a></h5>
                             <p>Emergency dental surgery performed promptly at a dental clinic to address urgent oral
                                 health issues, such as severe tooth infections or trauma.</p>
                         </div>
@@ -261,51 +263,50 @@
                 <div class="col-lg-4 col-md-6 mt-lg-0 mt-3">
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
-                            <i class="fas fa-user-md"></i>
+                            <!-- <i class="fas fa-user-md"></i> -->
+                            <img src="./assets/images/smile.jpg" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
-                            <h5 class="mb-3"><a href="about.html">Dental Implants</a></h5>
-                            <p>Dental implant services offered at a dental clinic include surgical placement of
-                                artificial tooth roots followed by restoration, providing a permanent solution for
-                                missing teeth.</p>
+                            <h5 class="mb-3"><a href="about.html">Smile Designing</a></h5>
+                            <p>A significant distinction between a corrective dental specialist and a general dental specialist is that a general dental specialist has been prepared to fix things, and the individual in question does that with a tyrant approach. </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-4">
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
-                            <i class="fas fa-teeth-open"></i>
+                            <!-- <i class="fas fa-teeth-open"></i> -->
+                            <img src="./assets/images/OPC.jpeg" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
-                            <h5 class="mb-3"><a href="about.html">Tooth Whitening</a></h5>
-                            <p>Tooth whitening services offered at a dental clinic involve professional treatments to
-                                lighten and brighten teeth, enhancing their appearance and smile aesthetics.></p>
+                            <h5 class="mb-3"><a href="about.html">Orthopantomogram</a></h5>
+                            <p>An orthopantomogram (OPG), also known as a panoramic dental X-ray, is a comprehensive two-dimensional image of the entire mouth. It captures the teeth, jaws, temporomandibular joints (TMJs), and surrounding structures in a single image.  </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-4">
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
-                            <i class="fas fa-crutch"></i>
+                            <!-- <i class="fas fa-crutch"></i> -->
+                            <img src="./assets/images/teeth-whitening.jpg" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
-                            <h5 class="mb-3"><a href="about.html">Prosthesis</a></h5>
-                            <p>Prosthesis services at a dental clinic encompass the fabrication and fitting of
-                                artificial dental appliances such as dentures, bridges, and crowns to restore function
-                                and aesthetics to the mouth.</p>
+                            <h5 class="mb-3"><a href="about.html">Teeth Whitening</a></h5>
+                            <p>Teeth Whitening is among the most popular cosmetic dental procedure, as it greatly improves the look of teeth.
+                                'Whitening' is not a one-time procedure, it needs to be repeated time to time.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-4">
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
-                            <i class="fas fa-teeth"></i>
+                            <!-- <i class="fas fa-teeth"></i> -->
+                            <img src="./assets/images/Full-or-Partial-Denture.jpg" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
-                            <h5 class="mb-3"><a href="about.html">Dental Braces</a></h5>
-                            <p>Dental braces services provided at a dental clinic involve the orthodontic treatment of
-                                misaligned teeth using braces or aligners to achieve proper alignment and improve bite
-                                function.</p>
+                            <h5 class="mb-3"><a href="about.html">Full And Partial Dentures</a></h5>
+                            <p>A 'Denture' is a removable replacement for missing teeth and surrounding tissues. two types of dentures are available : Complete and Partial Dentures.
+                                Complete dentures are used when all teeth are missing while Partial dentures are given, where some natural teeth remain.</p>
                         </div>
                     </div>
                 </div>
