--- a/services.html
+++ b/services.html
@@ -218,7 +218,11 @@
         </div>
     </section>
     <!-- //serviceblock1 section -->
-
+    <div class="whatsapp">
+        <a href="https://wa.me/+918187835489">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
     <!-- serviceblock2 section -->
     <div class="service-section py-5">
         <div class="container py-md-5 py-4">
