--- a/services.html
+++ b/services.html
@@ -336,7 +336,7 @@
                             </div>
                         </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 mt-4 pt-2">
+                        <!-- <div class="col-lg-3 col-md-6 mt-4 pt-2">
                             <div class="card">
                                 <div class="card-header p-0 position-relative border-0">
                                     <a href="services.html">
@@ -347,7 +347,7 @@
                                     <h4 href="services.html" class="service-heading"></h4>
                                 </div>
                             </div>
-                            </div>
+                            </div> -->
                             <div class="col-lg-3 col-md-6 mt-4 pt-2">
                                 <div class="card">
                                     <div class="card-header p-0 position-relative border-0">
